Add general benchmark figure

--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -36,3 +36,5 @@ can make use of vHTTP as-is and gain extra confidence in the authenticity and
 integrity of response contents.
 
 \subsection{Performance}
+
+\input{figures/general-benchmark}
