--- a/paper/vhttp.tex
+++ b/paper/vhttp.tex
@@ -51,6 +51,7 @@
 \usepackage{tikz}
 \usepackage{adjustbox}
 \usetikzlibrary{shapes,arrows,calc,positioning}
+\usepackage{pgfplots}
 
 %%%%% Setup for PDF
 \hypersetup{%
