--- a/paper/figures/general-benchmark.tex
+++ b/paper/figures/general-benchmark.tex
@@ -16,7 +16,7 @@
     \addplot+[only marks, mark size = 1pt, mark options=blue]
       table[x=run, y=no-proxy, col sep=comma]
       {data/general.csv};
-    \addlegendentry{normal}
+    \addlegendentry{Normal}
     \end{axis}
   \end{tikzpicture}
 
@@ -24,4 +24,5 @@
     General performance data of requests to various websites. vHTTP was
     configured with 4 vantage points.
     }
+  \label{figs:general-benchmark}
 \end{figure}
