--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -17,8 +17,8 @@ With a threshold setting of $T$ and $N$ total vantage points, vHTTP can
 mitigate an attack where $N-T$ vantage points are compromised; consequently,
 it is vital that the user configures a diverse set of vantage points that are
 unlikely to be compromised all together. Against small-scale attacks, vHTTP
-has shown to be effective in tests. A more detailed example of using vHTTP,
-and how it is effective against localized attacks, is included in the project
+has shown to be effective in tests. A detailed example of using vHTTP, and how
+it is effective against localized attacks, is included in the project
 repository.
 
 \subsection{Deployability}
