--- a/paper/figures/vhttp-consensus-flow.tex
+++ b/paper/figures/vhttp-consensus-flow.tex
@@ -34,7 +34,7 @@
     \emph{Flow of data when vHTTP achieves consensus.}
     In this example, the client proxies a request $R$ through vHTTP. vHTTP
     sends a slightly modified $R$\protect\footnotemark to the five vantage
-    points configured. Vantage points $A$, $B$, and $C$ respond. Assuming a
+    points configured. Vantage points $A$, $B$, and $E$ respond. Assuming a
     default threshold of $0.5$, they achieve consensus, so one of those
     responses (in this case, we arbitrarily chose $S_E$) is sent back to the
     user. $D$ is either a malicious proxy or a MITM attack is being performed
