--- a/paper/references.bib
+++ b/paper/references.bib
@@ -69,3 +69,12 @@
   url = {https://free-proxy-list.net/},
   note = {Accessed: 2017-12-31},
   }
+
+@inproceedings{Censys-HTTPS,
+  author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
+  title = {{A Search Engine Backed by {I}nternet-Wide Scanning}},
+  booktitle = {{Proceedings of the 22nd ACM Conference on Computer and Communications Security}},
+  month = {October},
+  year = {2015},
+  url = {https://censys.io},
+  }
