--- a/paper/vhttp.tex
+++ b/paper/vhttp.tex
@@ -4,7 +4,7 @@
 %%%
 \newcommand{\AUTHORS}{Rushy Panchal}
 \newcommand{\TITLE}{vHTTP: An HTTP Proxy using Vantage-Points}
-\newcommand{\KEYWORDS}{}
+\newcommand{\KEYWORDS}{http, proxy, vantage points}
 \newcommand{\CONFERENCE}{}
 \newcommand{\PAGENUMBERS}{yes}
 \newcommand{\TOAPPEAR}{no}
