--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -18,16 +18,23 @@ HTTPS alleviates most of these concerns through the use of certificates, which
 render remote MITM attacks nearly impossible to perform. In addition, HTTPS
 operates over TLS (Transport Layer Security) or SSL (Secure Sockets Layer) that
 encrypts data from both the client and server. However, not all servers allow
-or support HTTPS. Even if they do support HTTPS, websites often include
+or support HTTPS. Currently, about 21.6\% of Alexa's top 1,000,000 websites do
+not support HTTPS \cite{Censys-HTTPS}.\footnote{
+  The pervasiveness of HTTP exists even with higher Alexa ranks; 19.6\% of the
+  top 10,000 websites and 11\% of the top 100 do not support HTTPS
+  \cite{Censys-HTTPS}.
+  }
+
+Even if they do support HTTPS, websites often include
 download links (or more generally, instructions on how to download static
 content) that operate over HTTP. A simple solution to MITM attacks, then, is
 to upgrade servers to HTTPS; however, this is not possible without cooperation
 from the server administrators. A client wishing to validate the authenticity
-and integrity of data from a server over HTTP is out of luck.
+and integrity of data from a server over HTTP cannot do so.
 
 vHTTP is concerned with accessing static content over HTTP. Although most
 static content, such as images or text files, are not that harmful if a third
-party presents you with a bogus version, there are specific types of content
+party presents a bogus version, there are specific types of content
 which can be devastating. For example, downloading programs or installation
 scripts over HTTP, and then executing them, can have disastrous consequences
 were a MITM attack to be performed. Unfortunately, the practice of presenting
